# SuiteScriptGenerator

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  test.js
examples/: basic.js  combo.js  copyright.js  imports.js  typed.js  versioned.js
src/: main.rs
src/assets/: mod.rs  netsuite_types.rs
